[tool.poetry]
name = "django-migration-resolver-hook"
version = "0.1.0"
description = "Resolve Django migration conflicts"
authors = ["Tonye Jack <jtonye@ymail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = ">= 1.11, < 4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
